--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Demonstrating absolute imports in javascript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "BABEL_ENV=build babel --root-mode upward src --out-dir dist --source-maps --extensions .js --delete-dir-on-start --no-comments"
   },
   "author": "Bryson Hotopp",
   "license": "ISC",
