--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Demonstrating absolute imports in javascript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
     "compile": "BABEL_ENV=build babel --root-mode upward src --out-dir dist --source-maps --extensions .js --delete-dir-on-start --no-comments"
   },
   "author": "Bryson Hotopp",
@@ -19,6 +19,7 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
